# becool

./: .gitignore  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client
Client/include/: client.h
Client/src/: client.cpp  main.cpp
Server/: CMakeLists.txt  Server
Server/include/: remoteentry.h  server.h  user.h
Server/src/: main.cpp  remoteentry.cpp  server.cpp  user.cpp
common/: CMakeLists.txt  becool_socket.cpp  logger.cpp  protocol.cpp
common/include/: becool_socket.h  common.h  inputargreader.h  protocol.h  queue.h  serialization.h
